force-app/main/default/objects/Form_Field_Configuration__c/Form_Field_Configuration__c.object-meta.xml
<CustomObject>
    <description>Defines a single field&apos;s rendering, validation, and conditional behavior within a Form Configuration. One record per field per form.</description>
    <label>Form Field Configuration</label>
    <nameField>
        <displayFormat>FFC-{0000}</displayFormat>
        <label>Form Field Configuration</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Form Field Configurations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>