force-app/main/default/objects/Form_Field_Configuration__c/fields/Conditional_Rules__c.field-meta.xml
<CustomField>
    <fullName>Conditional_Rules__c</fullName>
    <description>JSON rule(s) controlling this field&apos;s conditional visibility or required-ness based on another field&apos;s value.</description>
    <inlineHelpText>Example: {&quot;controllingField&quot;:&quot;BillingCountry&quot;,&quot;operator&quot;:&quot;equals&quot;,&quot;value&quot;:&quot;USA&quot;,&quot;action&quot;:&quot;require&quot;}. Leave blank for no conditional behavior.</inlineHelpText>
    <label>Conditional Rules</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>