force-app/main/default/objects/Form_Field_Configuration__c/fields/Default_Value__c.field-meta.xml
<CustomField>
    <fullName>Default_Value__c</fullName>
    <description>Default value pre-filled into the field when the form loads for a new record.</description>
    <inlineHelpText>Ignored when the form is pre-filling from an existing record (Update mode).</inlineHelpText>
    <label>Default Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>