force-app/main/default/objects/Form_Field_Configuration__c/fields/Display_Layout__c.field-meta.xml
<CustomField>
    <fullName>Display_Layout__c</fullName>
    <description>Column layout used for this field&apos;s section.</description>
    <inlineHelpText>All fields in the same section should use the same layout value; the first field configuration read for a section determines it.</inlineHelpText>
    <label>Display Layout</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1-Column</fullName>
            </value>
            <value>
                <fullName>2-Column</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>