force-app/main/default/objects/Form_Field_Configuration__c/fields/Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_API_Name__c</fullName>
    <description>API name of the target field on the form&apos;s object (e.g. BillingCountry, Email).</description>
    <inlineHelpText>Must be a valid field on the object set in the parent form&apos;s Object API Name.</inlineHelpText>
    <label>Field API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>