force-app/main/default/objects/Form_Field_Configuration__c/fields/Field_Data_Type__c.field-meta.xml
<CustomField>
    <fullName>Field_Data_Type__c</fullName>
    <description>Overrides the schema-derived data type for this field when populated.</description>
    <inlineHelpText>Leave blank to auto-detect the type from the target object&apos;s schema. Populate only to force a different rendering (e.g. render a phone field as masked Text).</inlineHelpText>
    <label>Field Data Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Address</fullName>
            </value>
            <value>
                <fullName>Checkbox</fullName>
            </value>
            <value>
                <fullName>Currency</fullName>
            </value>
            <value>
                <fullName>Date</fullName>
            </value>
            <value>
                <fullName>DateTime</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Long Text Area</fullName>
            </value>
            <value>
                <fullName>Lookup</fullName>
            </value>
            <value>
                <fullName>Multi-Select Picklist</fullName>
            </value>
            <value>
                <fullName>Number</fullName>
            </value>
            <value>
                <fullName>Picklist</fullName>
            </value>
            <value>
                <fullName>Text</fullName>
            </value>
            <value>
                <fullName>Password</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>