force-app/main/default/objects/Form_Field_Configuration__c/fields/Field_Label__c.field-meta.xml
<CustomField>
    <fullName>Field_Label__c</fullName>
    <description>Label displayed for this field on the form.</description>
    <inlineHelpText>Leave blank to use the field&apos;s schema-defined label automatically.</inlineHelpText>
    <label>Field Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>