force-app/main/default/objects/Form_Field_Configuration__c/fields/Field_Order__c.field-meta.xml
<CustomField>
    <fullName>Field_Order__c</fullName>
    <description>The order in which this field renders within its section.</description>
    <inlineHelpText>Lower numbers render first. Fields in the same section are sorted by this value.</inlineHelpText>
    <label>Field Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>