force-app/main/default/objects/Form_Field_Configuration__c/fields/Form_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Form_Configuration__c</fullName>
    <description>The parent form this field configuration belongs to.</description>
    <inlineHelpText>Master-Detail so field configs are always deleted along with their parent form, and roll-up summaries (e.g. field count) are possible.</inlineHelpText>
    <label>Form Configuration</label>
    <referenceTo>Form_Configuration__c</referenceTo>
    <relationshipLabel>Field Configurations</relationshipLabel>
    <relationshipName>Field_Configurations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>