force-app/main/default/objects/Form_Field_Configuration__c/fields/Help_Text__c.field-meta.xml
<CustomField>
    <fullName>Help_Text__c</fullName>
    <description>Help text shown next to the field, typically via an info icon.</description>
    <inlineHelpText>Use to clarify what should be entered, especially for less obvious fields.</inlineHelpText>
    <label>Help Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>