force-app/main/default/objects/Form_Field_Configuration__c/fields/Input_Place_holder_Value__c.field-meta.xml
<CustomField>
    <fullName>Input_Place_holder_Value__c</fullName>
    <description>Placeholder text shown inside the input when it is empty.</description>
    <inlineHelpText>Purely cosmetic; not used as a value.</inlineHelpText>
    <label>Input Placeholder Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>