force-app/main/default/objects/Form_Field_Configuration__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Controls whether this field renders on the form.</description>
    <inlineHelpText>Uncheck to hide a field without deleting its configuration.</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>