force-app/main/default/objects/Form_Field_Configuration__c/fields/Is_Required__c.field-meta.xml
<CustomField>
    <fullName>Is_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marks this field as required on the form, in addition to any required-ness inherited from the object&apos;s own schema.</description>
    <inlineHelpText>The engine also inspects Conditional Rules for rule-driven required-ness (e.g. required only when another field has a certain value).</inlineHelpText>
    <label>Is Required</label>
    <type>Checkbox</type>
</CustomField>