force-app/main/default/objects/Form_Field_Configuration__c/fields/Lookup_Display_Field__c.field-meta.xml
<CustomField>
    <fullName>Lookup_Display_Field__c</fullName>
    <description>For Lookup-type fields, the field shown to the user in search results and once selected (e.g. Name).</description>
    <inlineHelpText>Defaults to &apos;Name&apos; if left blank.</inlineHelpText>
    <label>Lookup Display Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>