force-app/main/default/objects/Form_Field_Configuration__c/fields/Lookup_Filter__c.field-meta.xml
<CustomField>
    <fullName>Lookup_Filter__c</fullName>
    <description>Optional SOQL WHERE-clause fragment used to filter lookup search results.</description>
    <inlineHelpText>e.g. &quot;Type = &apos;Customer&apos;&quot;. Leave blank for no filtering.</inlineHelpText>
    <label>Lookup Filter</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>