force-app/main/default/objects/Form_Field_Configuration__c/fields/Lookup_Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Lookup_Object_API_Name__c</fullName>
    <description>For Lookup-type fields, the API name of the object being searched (e.g. Account).</description>
    <inlineHelpText>Required when Field Data Type is set to Lookup.</inlineHelpText>
    <label>Lookup Object API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>