force-app/main/default/objects/Form_Field_Configuration__c/fields/Picklist_Values__c.field-meta.xml
<CustomField>
    <fullName>Picklist_Values__c</fullName>
    <description>Overrides the schema-derived picklist options for this field when populated.</description>
    <inlineHelpText>One option per line, format: Label|Value. Leave blank to auto-detect active picklist values from the object&apos;s schema.</inlineHelpText>
    <label>Picklist Values</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>