force-app/main/default/objects/Form_Field_Configuration__c/fields/Read_Only__c.field-meta.xml
<CustomField>
    <fullName>Read_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Renders the field as visible but non-editable.</description>
    <inlineHelpText>Useful for showing context (e.g. a related record&apos;s status) without allowing edits, independent of the user&apos;s actual FLS edit access.</inlineHelpText>
    <label>Read Only</label>
    <type>Checkbox</type>
</CustomField>