force-app/main/default/objects/Form_Field_Configuration__c/fields/Section_Description__c.field-meta.xml
<CustomField>
    <fullName>Section_Description__c</fullName>
    <description>Optional descriptive text shown under the section heading.</description>
    <inlineHelpText>Use to give end users context about what a section is asking for.</inlineHelpText>
    <label>Section Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>