force-app/main/default/objects/Form_Field_Configuration__c/fields/Section_Name__c.field-meta.xml
<CustomField>
    <fullName>Section_Name__c</fullName>
    <description>Name of the section this field is grouped under.</description>
    <inlineHelpText>Fields sharing the same Section Name render together under one heading.</inlineHelpText>
    <label>Section Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>