force-app/main/default/objects/Form_Field_Configuration__c/fields/Section_Order__c.field-meta.xml
<CustomField>
    <fullName>Section_Order__c</fullName>
    <description>The order in which this field&apos;s section renders on the form relative to other sections.</description>
    <inlineHelpText>Lower numbers render first.</inlineHelpText>
    <label>Section Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>