force-app/main/default/objects/Form_Field_Configuration__c/fields/Validation_Error__c.field-meta.xml
<CustomField>
    <fullName>Validation_Error__c</fullName>
    <description>Error message shown when the value fails the Validation Pattern.</description>
    <inlineHelpText>Shown inline under the field. Falls back to a generic message if left blank.</inlineHelpText>
    <label>Validation Error</label>
    <length>255</length>
    <type>Text</type>
</CustomField>