force-app/main/default/objects/Form_Field_Configuration__c/fields/Validation_Pattern__c.field-meta.xml
<CustomField>
    <fullName>Validation_Pattern__c</fullName>
    <description>Optional regular expression the field&apos;s entered value must match before the form can submit.</description>
    <inlineHelpText>e.g. &apos;^[0-9]{6}$&apos; for a 6-digit postal code. Leave blank to skip pattern validation for this field.</inlineHelpText>
    <label>Validation Pattern</label>
    <length>255</length>
    <type>Text</type>
</CustomField>